# fresh

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Elitefile  ana.feproj  asd.feproj  build_and_run.ps1  clean.py  fes.cpp  gay.feproj  imgui.ini  integril.feproj  test_project.feproj
example/: CMakeLists.txt  button_clicked.png~  character.fes  example.cpp  example.feproj  example_lib.cpp  inner_sprite_object.fe  main_menu.fes  scene.fes  scene_1.fes  test.fe  w.fe
example/box2d_example/: circle.fes  physics_scene.fe  physics_scene.fes
example/test/: character.fes  scene.fe  scene.fes  wall.fes
include/: freshengine.hpp  render_objects.hpp
include/application/: window.hpp
include/editor/: editor.hpp  editor.hpp_deprecated  operation.hpp
include/fes/: fes.hpp  fes_ast.hpp  fes_keywords.hpp  fes_object.hpp  fes_parser.hpp  fes_tokenizer.hpp
include/fescript/: fescript_array.hpp  fescript_callable.hpp  fescript_class.hpp  fescript_dict.hpp  fescript_environment.hpp  fescript_error.hpp  fescript_expr.hpp  fescript_function.hpp  fescript_instance.hpp  fescript_interpreter.hpp  fescript_parser.hpp  fescript_resolver.hpp  fescript_return.hpp  fescript_runtime_error.hpp  fescript_scanner.hpp  fescript_stmt.hpp  fescript_token.hpp  fescript_token_type.hpp
include/fescript/modules/: engine.hpp  engine_io.hpp  engine_window.hpp  fescript_io.hpp  fescript_math.hpp  fescript_os.hpp  fescript_path.hpp  fescript_prng.hpp  module_helpers.hpp
include/fescript/wrappers/: fescript_animation_frame_object.hpp  fescript_animation_player_object.hpp  fescript_area_object.hpp  fescript_audio_player_object.hpp  fescript_base_object.hpp  fescript_camera_object.hpp  fescript_circle_object.hpp  fescript_collision_object.hpp  fescript_label_object.hpp  fescript_music_player_object.hpp  fescript_point_light_object.hpp  fescript_polygon_object.hpp  fescript_rectangle_object.hpp  fescript_sprite_object.hpp
include/fescript/wrappers/animation/: fescript_animation_frame_object.hpp  fescript_animation_player_object.hpp
include/fescript/wrappers/physics/: fescript_area_object.hpp  fescript_body_object.hpp  fescript_circle_area_object.hpp  fescript_circle_body_object.hpp  fescript_polygon_area_object.hpp  fescript_polygon_body_object.hpp  (+3 more)
include/input/: keyboard_input.hpp  mouse_input.hpp
include/log/: log.hpp
include/objects/: animation_frame_object.hpp  animation_player_object.hpp  area_object.hpp  audio_player_object.hpp  base_object.hpp  camera_object.hpp  circle_object.hpp  collision_object.hpp  label_object.hpp  music_player_object.hpp  point_light_object.hpp  polygon_object.hpp  rectangle_object.hpp  shader_object.hpp  sprite_object.hpp
include/objects/animation/: animation_frame_object.hpp  animation_player_object.hpp
include/objects/editor/: editor_project_color_object.hpp  editor_project_file_object.hpp  editor_project_object.hpp
include/objects/gui/: gui_base_object.hpp  gui_button_object.hpp
include/objects/physics/: area_object.hpp  body_object.hpp  circle_area_object.hpp  circle_body_object.hpp  polygon_area_object.hpp  polygon_body_object.hpp  rectangle_area_object.hpp  rectangle_body_object.hpp  world_object.hpp
include/resources/: animated_sprite_resource.hpp  animation_key_resource.hpp  animation_property_resource.hpp  animation_resource.hpp  audio_resource.hpp  bbox_resource.hpp  cache_resource.hpp  circle_resource.hpp  clipboard_resource.hpp  color_resource.hpp  cursor_resource.hpp  edge_resource.hpp  fes_loader_resource.hpp  font_resource.hpp  id_resource.hpp  meta_data_resource.hpp  music_resource.hpp  point_resource.hpp  polygon_resource.hpp  shader_resource.hpp  sprite_resource.hpp  timer_resource.hpp
libs/imgui/: imgui.cpp
src/: freshengine.cpp  render_objects.cpp
src/application/: window.cpp
src/editor/: editor.cpp  editor.cpp_deprecated  operation.cpp
src/fes/: fes_ast.cpp  fes_parser.cpp  fes_tokenizer.cpp
src/fescript/: fescript.cpp  fescript_array.cpp  fescript_class.cpp  fescript_dict.cpp  fescript_environment.cpp  fescript_expr.cpp  fescript_function.cpp  fescript_instance.cpp  fescript_interpreter.cpp  fescript_parser.cpp  fescript_resolver.cpp  fescript_scanner.cpp  fescript_stmt.cpp  fescript_token.cpp
src/fescript/modules/: engine.cpp  engine_io.cpp  engine_window.cpp  fescript_io.cpp  fescript_math.cpp  fescript_os.cpp  fescript_path.cpp  fescript_prng.cpp
src/fescript/wrappers/: fescript_animation_frame_object.cpp  fescript_animation_player_object.cpp  fescript_area_object.cpp  fescript_audio_player_object.cpp  fescript_base_object.cpp  fescript_camera_object.cpp  fescript_circle_object.cpp  fescript_collision_object.cpp  fescript_label_object.cpp  fescript_music_player_object.cpp  fescript_point_light_object.cpp  fescript_polygon_object.cpp  fescript_rectangle_object.cpp  fescript_sprite_object.cpp
src/input/: keyboard_input.cpp  mouse_input.cpp
src/objects/: animation_frame_object.cpp  animation_player_object.cpp  area_object.cpp  audio_player_object.cpp  base_object.cpp  camera_object.cpp  circle_object.cpp  collision_object.cpp  label_object.cpp  music_player_object.cpp  point_light_object.cpp  polygon_object.cpp  rectangle_object.cpp  shader_object.cpp  sprite_object.cpp
src/objects/animation/: animation_frame_object.cpp  animation_player_object.cpp
src/objects/editor/: editor_project_color_object.cpp  editor_project_file_object.cpp  editor_project_object.cpp
src/objects/gui/: gui_base_object.cpp  gui_button_object.cpp
src/objects/physics/: area_object.cpp  body_object.cpp  circle_area_object.cpp  circle_body_object.cpp  polygon_area_object.cpp  polygon_body_object.cpp  rectangle_area_object.cpp  rectangle_body_object.cpp  world_object.cpp
src/resources/: animation_resource.cpp  audio_resource.cpp  cache_resource.cpp  circle_resource.cpp  clipboard_resource.cpp  color_resource.cpp  cursor_resource.cpp  edge_resource.cpp  fes_loader_resource.cpp  font_resource.cpp  id_resource.cpp  music_resource.cpp  point_resource.cpp  polygon_resource.cpp  shader_resource.cpp  sprite_resource.cpp  timer_resource.cpp
(+13 files in other folders)
